--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -50,6 +50,10 @@
                 <%- include("../admin/hospital-analytics") %>
             <% } else if (page === 'programs') { %>
                 <%- include("../admin/programs") %>
+            <% } else if (page === 'program-applications') { %>
+                <%- include("../admin/program-applications") %>
+            <% } else if (page === 'application-details') { %>
+                <%- include("../admin/application-details") %>
             <% } else if (page === 'alerts') { %>
                 <%- include("../admin/alerts") %>
             <% } %>
