--- a/views/admin/program-applications.ejs
+++ b/views/admin/program-applications.ejs
@@ -136,12 +136,12 @@
                             <% } %>
                         </td>
                         <td class="px-6 py-4">
-                            <a 
-                                href="/admin/programs/<%= program._id %>/applications/<%= app._id %>" 
-                                class="text-blue-600 hover:text-blue-800 font-medium text-sm"
+                            <button 
+                                onclick="viewApplicationDetails('<%= app._id %>')"
+                                class="text-blue-600 hover:text-blue-800 font-medium text-sm hover:underline"
                             >
                                 View Details →
-                            </a>
+                            </button>
                         </td>
                     </tr>
                     <% }); %>
